# pdfclean

./: Cargo.toml  README.md  test-before.md  test-cleaned.md
src/: cleaner.rs  lib.rs  main.rs
src/handlers/: heading_handler.rs  image_handler.rs  mod.rs  paragraph_handler.rs  regex_handler.rs  table_handler.rs  traits.rs  whitespace_handler.rs
src/processor/: markdown_processor.rs  mod.rs
src/processors/: image_processor.rs  mod.rs  table_processor.rs  traits.rs  whitespace_processor.rs
tests/: integration_tests.rs
tests/expected/: basic_text_cleaned.md  complex_document_cleaned.md  with_images_cleaned.md  with_tables_cleaned.md
tests/fixtures/: basic_text.md  complex_document.md  with_images.md  with_tables.md
