[package]
name = "mdclean"
version = "0.1.0"
edition = "2021"
description = "AI-specialized markdown cleaner for PDF-extracted content"
license = "MIT"
authors = ["Claude AI <noreply@anthropic.com>"]
repository = "https://github.com/ikegam/mdclean"

[[bin]]
name = "mdclean"
path = "src/main.rs"

[dependencies]
markdown = "1.0"
regex = "1.10"
anyhow = "1.0"
